# rtt_rust

./: .gitignore  .gitmodules  README.md  SConscript  rust_build.py
.github/: host_test.sh  rttconfig-qemu-vexpress-a9  test_qemu-vexpress-a9.sh
.github/workflows/: rust.yml
rtt-embedded-hal/: Cargo.toml
rtt-embedded-hal/src/: lib.rs
rtt-embedded-hal/src/sync/: mod.rs  serial.rs
rtt_main/: Cargo.toml
rtt_main/src/: lib.rs
rtt_rs2/: Cargo.toml  build.rs  build.sh  wrapper.h
rtt_rs2/src/: bind.rs  lib.rs  malloc.rs  mutex.rs  out.rs  param.rs  puts.rs  queue.rs  semaphore.rs  thread.rs  time.rs
rtt_rs2/src/api/: base.rs  cdevops.rs  device.rs  dfsdevops.rs  interrupt.rs  mem.rs  mod.rs  mutex.rs  queue.rs  sem.rs  thread.rs
rtt_rs2/src/prelude/: no_std.rs
rtt_rust_example_app/em_mutex/: Cargo.toml
rtt_rust_example_app/em_mutex/src/: lib.rs
rtt_rust_example_app/em_param/: Cargo.toml
rtt_rust_example_app/em_param/src/: lib.rs
rtt_rust_example_app/em_queue/: Cargo.toml
rtt_rust_example_app/em_queue/src/: lib.rs
rtt_rust_example_app/em_sem/: Cargo.toml
rtt_rust_example_app/em_sem/src/: lib.rs
rtt_rust_example_app/em_thread/: Cargo.toml
rtt_rust_example_app/em_thread/src/: lib.rs
